/*
Copyright IBM Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

option go_package = "github.com/hyperledger/fabric-x-committer/api/servicepb";

package servicepb;

import "api/committerpb/block_tx.proto";
import "api/committerpb/ref.proto";

// A reference to the last committed block.
message LastCommittedBlock {
    optional committerpb.BlockRef block = 1;
}

// A committer's representation of a TX in the blockchain.
message TxWithRef {
    committerpb.TxRef ref = 1;  // The TX reference.
    committerpb.Tx content = 2; // The TX content.
}
